--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Netflix India</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="titlelogo.png" type="image/icon type">
+        <link rel="stylesheet" href="Project Netflix Homepage/style.css">
+        <link rel="icon" href="Project Netflix Homepage/titlelogo.png" type="image/icon type">
     </head>
     <body>
         <div class="header">
             <nav>
-                <img src="logo.png" class="logo" height="50">
+                <img src="Project Netflix Homepage/logo.png" class="logo" height="50">
                 <div>
-                    <button class="language-btn">English <img src="dropdown.png"></button>
+                    <button class="language-btn">English <img src="Project Netflix Homepage/dropdown.png"></button>
                     <button>Sign In</button>
                 </div>
             </nav>
@@ -33,13 +33,13 @@
                 <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
             </div>
             <div class="img-col">
-                <img src="bg2.png">
+                <img src="Project Netflix Homepage/bg2.png">
             </div>
         
         </div>
             <div class="row">
                 <div class="img-col">
-                    <img src="bg3.jpg">
+                    <img src="Project Netflix Homepage/bg3.jpg">
                 </div>
                 <div class="text-col">
                     <h2>Download your shows to watch offline</h2><br>
@@ -53,12 +53,12 @@
                     <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
                 </div>
                 <div class="img-col">
-                    <img src="bg4.png">
+                    <img src="Project Netflix Homepage/bg4.png">
                 </div>
             </div>
             <div class="row">
                 <div class="img-col">
-                    <img src="bg5.png">
+                    <img src="Project Netflix Homepage/bg5.png">
                 </div>
                 <div class="text-col">
                     <h2>Create profiles for kids</h2><br>
@@ -154,7 +154,7 @@
                 <a href="#">Contact Us</a>
             </div>
         </div>
-        <button class="language-btn">English <img src="dropdown.png"></button>
+        <button class="language-btn">English <img src="Project Netflix Homepage/dropdown.png"></button>
         <p class="copyright">Netflix India</p>
     </div>
 
