--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h3>Join today. Cancel anytime.</h3><br>
                 <h5>Ready to watch? Enter your email to create or restart your membership.</h5><br>
                 <form class="email-signup">
-                    <input type="email" placeholder="Email address" required>
+                    <input type="email" placeholder="Email address">
                     <button type="submit">Get Started</button>
                 </form>
             </div>
